--- a/wxcloudrun/roles.ini
+++ b/wxcloudrun/roles.ini
@@ -1,20 +1,20 @@
 [甄嬛]
-ability = "当你在夜晚被皇上皇后杀死，你可以反杀成为女皇"
-word = "刚入宫的甄嬛已经死了，臣妾是钮祜禄甄嬛。"
-prompt = "注意隐藏身份"
+ability = 当你在夜晚被皇上皇后杀死，你可以反杀成为女皇
+word = 刚入宫的甄嬛已经死了，臣妾是钮祜禄甄嬛。
+prompt = "注意隐藏身份
 
 [玉娆]
-ability = "首页，你会得知一名善良玩家的身份，如果恶魔杀死这名玩家，你也会死去"
-word = "皇上的妻子只有一个，玉娆也希望成为别人唯一的妻子。"
-prompt = "你知晓的玩家由说书人指定，如果你在首夜醉酒或中毒，你会知晓错误信息，整局中不会因为绑定玩家死去而死去；如果你在绑定玩家死去的那晚中毒，你也不会死去。"
+ability = 首页，你会得知一名善良玩家的身份，如果恶魔杀死这名玩家，你也会死去
+word = 皇上的妻子只有一个，玉娆也希望成为别人唯一的妻子。
+prompt = 你知晓的玩家由说书人指定，如果你在首夜醉酒或中毒，你会知晓错误信息，整局中不会因为绑定玩家死去而死去；如果你在绑定玩家死去的那晚中毒，你也不会死去。
 [年羹尧]
-ability = "当你死亡时，在当晚你可以带走一名玩家（整局游戏限一次）"
-word = "华妃娘娘尽心于内，臣尽忠于外，臣兄妹二人愿为皇上尽心竭力，效犬马之劳"
-prompt = "如果你中毒或醉酒，说书人依然会在夜晚唤醒你杀人，但不会生效。如果你杀的人被果郡王守护，也不会生效。"
+ability = 当你死亡时，在当晚你可以带走一名玩家（整局游戏限一次）
+word = 华妃娘娘尽心于内，臣尽忠于外，臣兄妹二人愿为皇上尽心竭力，效犬马之劳
+prompt = 如果你中毒或醉酒，说书人依然会在夜晚唤醒你杀人，但不会生效。如果你杀的人被果郡王守护，也不会生效。
 [槿汐姑姑]
-ability = "每晚选择场上两名玩家，知道其中是否有恶魔"
-word = "放不下荣华富贵的人，就永远成不了大气候。"
-prompt = "场上有苏培盛的情况下，你会属于邪恶阵营，说书人不会在夜晚唤醒你。"
+ability = 每晚选择场上两名玩家，知道其中是否有恶魔
+word = 放不下荣华富贵的人，就永远成不了大气候。
+prompt = 场上有苏培盛的情况下，你会属于邪恶阵营，说书人不会在夜晚唤醒你。
 [浣碧]
 ability = "huanbi"
 word = "zhenhuan"
