增加一些台词

--- a/wxcloudrun/roles.ini
+++ b/wxcloudrun/roles.ini
@@ -2,7 +2,6 @@
 ability = 当你在夜晚被皇上皇后杀死，你可以反杀成为女皇
 word = 刚入宫的甄嬛已经死了，臣妾是钮祜禄甄嬛。
 prompt = "注意隐藏身份
-
 [玉娆]
 ability = 首页，你会得知一名善良玩家的身份，如果恶魔杀死这名玩家，你也会死去
 word = 皇上的妻子只有一个，玉娆也希望成为别人唯一的妻子。
@@ -16,34 +15,74 @@ ability = 每晚选择场上两名玩家，知道其中是否有恶魔
 word = 放不下荣华富贵的人，就永远成不了大气候。
 prompt = 场上有苏培盛的情况下，你会属于邪恶阵营，说书人不会在夜晚唤醒你。
 [浣碧]
-ability = "huanbi"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 首夜，你可以知道恶魔与最近爪牙的间距。当你坐在果郡王身边时，你会醉酒。
+word = 她原就是穷门小户出身，再好的料子用在她身上也是白费。
+prompt = 你得知的爪牙是最近的那一个
 [纯元皇后]
-ability = "皇后啊"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 当你首次被提名时，如果提名者是村民，那么这位玩家会直接被处决。
+word = 我命薄，不能与四郎白首到老，连咱们的孩子也未能保住，唯有宜修一个妹妹，希望四郎日后能够善待于她，千万不要背弃她。
+prompt = 你的技能只会发动一次，如果你中毒会醉酒，你的技能不会生效，但仍然失去首次。
 [果郡王]
-ability = "保护"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 每晚你可以保护一个人，他不会被刀也不会被睡。
+word = 没有你，这福寿绵长于我而言，不过是万事皆空而已。
+prompt = 你可以保护你自己，但是你不能连续保护一个人。
 [敬妃]
-ability = "反杀"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 首页，你会知道场上有多少女性角色；当你被皇上杀死，你可以知道场上还有多少邪恶玩家。
+word = 我宫里一共有三百二十六块砖石，可是这每一块，我都抚摸过无数遍了，其中还有三十一块已经出现了细碎的裂纹
+prompt = 太监，太医也算女性角色
 [太后]
-ability = "反杀"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 在一名玩家提名投票后，发起强制处决
+word = 皇帝，你幽禁皇亲，手足相残，连自己的弟弟都不肯放过，你会落得六亲不认，骨肉分离的地步。
+prompt = 你的技能只能发动一次，处决之后，会立刻进入黑夜。
 [温实初]
-ability = "反杀"
+ability = 每晚你可以查验一个人，得知他是否中毒或醉酒
 word = "zhenhuan"
-prompt = "zhenhuan"
+prompt = 
 [三阿哥]
-ability = "反杀"
+ability = 每晚可以染指你邻座中的一个存活玩家，如果他是宠妃，则其恢复原身份和技能。
 word = "zhenhuan"
-prompt = "zhenhuan"
+prompt = 如果在宠妃诞生的当晚，你进行染指，那你会直接死亡。染指到女皇，你也会直接死亡。你的技能对齐妃，胧月无效，太后无效。
 [叶澜依]
-ability = "反杀"
-word = "zhenhuan"
-prompt = "zhenhuan"
+ability = 整局游戏限一次，在夜晚，你可以选择一名死亡玩家，他将在白天复活。
+word = 你的福气在后头
+prompt = 复活玩家会重新获得他的技能
+[齐妃]
+ability = 你可以使一名玩家在白天禁言，如果他不服从管教，则会立刻被处决，之后进入黑夜。
+word = 翠果，打烂她的嘴。
+prompt = 每个白天可使用一次，不能连续对同一名玩家使用。
+[敦亲王]
+ability = 每个白天可以选择一名玩家醉酒到明天
+word = 如此说来，这才貌双全倒成了浪得虚名，只是以色侍人更显得皇上以貌取人咯
+prompt = 醉酒立刻生效，明天白天解除
+[胧月]
+ability = 如果你因为处决而死，你的阵营将会失败。
+word = 胧月愿做君子，孝顺好皇阿玛和额娘，照顾好弟妹。
+prompt = 太后的技能会对你生效。
+[孙答应]
+ability = 当狂徒死亡时，夜晚你也会死亡。当你死亡时，会导致全场醉酒
+word = 你只会颠鸾倒凤不知天地为何物，没有台词
+prompt = 如果皇上醉酒后，他杀人的技能不会生效。
+[狂徒]
+ability = 你身上有孙答应的赤色肚兜，你随时可能被捉奸死亡
+word = 你只会颠鸾倒凤不知天地为何物，没有台词
+prompt = 如果说书人觉得有人知道了你的身份，你会立刻被处决
+[苏培盛]
+ability = 场上的外来者数量+1；当场上有槿汐姑姑时，她会成为爪牙；
+word = 槿汐与温太医怎么会是奴才的孩子
+prompt = 槿汐姑姑会知道爪牙是谁，也会知道恶魔是谁
+[华妃]
+ability = 每晚赐一名一丈红，如果第二天该玩家发起提名，将会直接暴毙。
+word = 贱人就是矫情！
+prompt = 该次提名依然有效；当场上只有三名玩家时，该技能时效。
+[安陵容]
+ability = 每晚可以使一名女性角色中毒；可以诅咒一名玩家，他会在下一个夜晚死亡。
+word = 你的福气在后头
+prompt = 两个技能可以同时使用；中毒持续到第二天的黄昏。
+[皇后]
+ability = 场上多余5名玩家存活时，若恶魔死亡，你会成为新的恶魔。
+word = 你的福气在后头
+prompt = 如果女皇上位，你的技能会失效。
+[皇上]
+ability = 整局游戏限一次，在夜晚，你可以选择一名死亡玩家，他将在白天复活。
+word = 你的福气在后头
+prompt = 复活玩家会重新获得他的技能
