增加一些角色信息；内容待补充

--- a/wxcloudrun/roles.ini
+++ b/wxcloudrun/roles.ini
@@ -90,3 +90,91 @@ prompt = 如果女皇上位，你的技能会失效。
 ability = 除首夜，你每晚可以杀死一名玩家；整局游戏限一次，你可以选择一名女性玩家睡觉，纳入你的阵营。
 word = 粉丝娇嫩，你今年几岁了
 prompt = 两个技能可以在同一晚发动。
+[杀手]
+ability = 
+word = 
+prompt = 
+[洗衣妇人]
+ability = 
+word = 
+prompt = 
+[图书管理员]
+ability = 
+word = 
+prompt = 
+[调查员]
+ability = 
+word = 
+prompt = 
+[厨师]
+ability = 
+word = 
+prompt = 
+[共情者]
+ability = 
+word = 
+prompt = 
+[占卜师]
+ability = 
+word = 
+prompt = 
+[掘墓人]
+ability = 
+word = 
+prompt = 
+[僧侣]
+ability = 
+word = 
+prompt = 
+[守鸦人]
+ability = 
+word = 
+prompt = 
+[圣女]
+ability = 
+word = 
+prompt = 
+[士兵]
+ability = 
+word = 
+prompt = 
+[市长]
+ability = 
+word = 
+prompt = 
+[管家]
+ability = 
+word = 
+prompt = 
+[酒鬼]
+ability = 
+word = 
+prompt = 
+[隐士]
+ability = 
+word = 
+prompt = 
+[圣徒]
+ability = 
+word = 
+prompt = 
+[下毒者]
+ability = 
+word = 
+prompt = 
+[间谍]
+ability = 
+word = 
+prompt = 
+[荡妇]
+ability = 
+word = 
+prompt = 
+[男爵]
+ability = 
+word = 
+prompt = 
+[小恶魔]
+ability = 
+word = 
+prompt = 
